Fix alignment of Cost text by using flex-start on row-reverse frame

--- a/src/pages/WorkStory/WorkStory.module.css
+++ b/src/pages/WorkStory/WorkStory.module.css
@@ -1286,7 +1286,7 @@
 
 .staggerRight .gapPillarFrame {
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
   margin-left: 0;
   flex-direction: row-reverse;
 }
